# advent-of-code-2025

./: .gitignore  README.md
days/: Cargo.toml
days/src/days_module/: day.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  mod.rs
helpers/: Cargo.toml
helpers/src/: lib.rs
helpers/src/cube/: cube.rs
helpers/src/grid/: grid.rs  grid_index.rs  mod.rs  mutable_grid.rs
helpers/src/union_find/: union_find.rs
runner/: Cargo.toml
runner/src/: main.rs
